--- a/src/pages/agenda/agenda.scss
+++ b/src/pages/agenda/agenda.scss
@@ -1,14 +1,18 @@
-page-lugares {
-  ion-card{
+page-agenda {
+  ion-card {
     margin: 5px !important;
     width: calc(100% - 8px) !important;
   }
 
-  ion-item{
+  ion-item {
     padding-left: 3px !important;
   }
+  .item-inner {
+    margin-left: 5px !important;
+  }
 
-  ion-avatar{
+  ion-icon {
     margin-right: 5px !important;
   }
+
 }
