--- a/src/pages/atracciones/atracciones.scss
+++ b/src/pages/atracciones/atracciones.scss
@@ -14,4 +14,8 @@ page-atracciones {
   ion-icon {
     margin-right: 5px !important;
   }
+
+  .searchbar-md .searchbar-input {
+    box-shadow: none;
+  }
 }
